Fix some layout problem, add Dates filter

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@ body {
 }
 
 .container {
-  max-width: 966px;
+  max-width: 982px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .row {
